--- a/FoodMate/accounts/templates/accounts/security.html
+++ b/FoodMate/accounts/templates/accounts/security.html
@@ -1,7 +1,7 @@
 {% extends 'accounts/profile.html' %}
 {% load static %}
 
-{% block content %}
+{% block submenu %}
 <head>
     <link rel="stylesheet" href="{% static 'css/security.css' %}">
 </head>
