--- a/FoodMate/photo/templates/photo/written_photo.html
+++ b/FoodMate/photo/templates/photo/written_photo.html
@@ -10,7 +10,7 @@
     {% csrf_token %}
     <div style=" margin-top: 19px; margin: 0 auto; width: 1193px; background: #F9F9F9; border: 2px solid #FFBE00; border-radius: 29px;">
         <div style="margin-top: 50px; margin-left:78px;">
-            <p style="display:inline-block; width: 94px;height: 35px;font-family: Noto Sans KR;font-style: normal;font-weight: bold;font-size: 24px;line-height: 35px;color: #000000;">찜한 글</p>
+            <p style="display:inline-block; width: 94px;height: 35px;font-family: Noto Sans KR;font-style: normal;font-weight: bold;font-size: 24px;line-height: 35px;color: #000000;">작성한 글</p>
             <p class="count" style="margin-left: 19px; ">{{ count }}</p>
             <p class="count">건</p>
         </div>
