--- a/FoodMate/photo/static/css/photo_list.css
+++ b/FoodMate/photo/static/css/photo_list.css
@@ -23,6 +23,36 @@ a:hover{
     margin: 0 auto;
     margin-top: 13px;
 }
+.category_container{
+    float:left;
+    width: 150px;
+    border: 0;
+    background: white;
+    font-size: 18px;
+    margin-top: 8px;
+    margin-left: 9%;
+}
+.category_des_text{
+    display: inline-block;
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 22px;
+}
+
+.category_checkbox{
+    display: inline-block;
+    padding-top: 10px;
+    width: 50px;
+    height: 30px;
+    margin-right: 10px;
+    margin-top: 5px;
+}
+.category_checkbox + span{
+    font-size: 18px;
+    display: inline-block;
+    line-height: 30px;
+}
+
 .article_board{
     padding-left: 15px;
     width: 1080px;
@@ -134,3 +164,4 @@ a:hover{
 
     color: #FFFFFF;
 }
+
